change form order 2

--- a/_header.scss
+++ b/_header.scss
@@ -217,6 +217,7 @@ $homeColorElem: orange;
   }
   &__label {
     display: block;
+    width: 100%;
     cursor: pointer;
     & span {
       display: inline-block;
